HIPCMS-427 swap columns on the edit-user page, remove bootstrap class, align label for the role correctly

--- a/app/admin/edit-user/edit-user.component.css
+++ b/app/admin/edit-user/edit-user.component.css
@@ -18,7 +18,6 @@ select {
 }
 
 md-input {
-  margin: auto 5%;
   width: 100%;
 }
 
